--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "fortawesome/font-awesome": "^5.3",
         "facebook/graph-sdk": "*",
+        "twilio/sdk": "^6.6",
         "vlucas/phpdotenv": "^5"
     }
 }
